@@ -112,9 +112,9 @@ pkgbin_SCRIPTS = install-sh mkinstalldirs
 
 pkgcfgdir =	$(pkglibdir)/macros.d
 pkgcfg_DATA = \
-	macros/cmake macros/gstreamer macros/java macros/libtool macros/mandriva \
-	macros/mono macros/perl macros/pkgconfig macros/php macros/python macros/ruby \
-	macros/selinux macros/tcl
+	macros/cmake macros/gstreamer macros/java macros/kernel macros/libtool \
+	macros/mandriva macros/mono macros/perl macros/pkgconfig macros/php \
+	macros/python macros/ruby macros/selinux macros/tcl
 
 noinst_HEADERS = build.h debug.h system.h
 
