@@ -15,7 +15,7 @@ EXTRA_DIST = abi-compliance-checker.pl api-sanity-autotest.pl \
 	deb_control deb_md5sums deb_postinst deb_postrm deb_preinst deb_prerm \
 	executabledeps.sh \
 	find-debuginfo.sh find-lang.sh find-prov.pl find-req.pl \
-	find-provides.ksyms find-requires.ksyms kmodtool \
+	find-provides.ksyms find-requires.ksyms kmod-deps.sh kmodtool \
 	cpanflute cpanflute2 Specfile.pm \
 	find-provides.perl find-requires.perl \
 	find-provides.php find-requires.php \
