@@ -1,4 +1,6 @@
 5.4.0 -> 5.4.1:
+    - proyvind: rpmfc: add internel dep generator helper for kernel modules.
+    - provyind: kmod-deps.sh: add dependency extractor from mandriva.
     - proyvind: rpmds: implement devel(libfoo) symlink dependencies from
 	Mandriva, but with proper ELF SONAME checking.
     - jbj: mongo: stub-in a /usr/lib/rpm/bin mongo shell wrapper.
